--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
-
+    compileSdkVersion 32
+    buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.om.dvcamera2txt"
-        minSdk 21
-        targetSdk 32
+        applicationId "com.bmv.ocrdemo"
+        minSdkVersion 21
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -25,10 +24,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    task wrapper(type: Wrapper){
-        gradleVersion = '6.1'
-    }
 }
 
 dependencies {
@@ -38,9 +33,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    // implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'org.apache.commons:commons-lang3:3.5'
-    implementation 'com.google.android.gms:play-services-vision:10.0.0'
+    implementation 'org.apache.commons:commons-lang3:3.8.1'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 }
