--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    /*id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false*/
-//    id 'com.android.application' version '6.1.1' apply false
-  //  id 'com.android.library' version '6.1.1' apply false
+buildscript {
+    repositories {
+        google()
+        maven { url "https://jitpack.io" }
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
+}
 
+allprojects {
+    repositories {
+        google()
+        maven { url "https://jitpack.io" }
+        jcenter()
+    }
 }
 
 task clean(type: Delete) {
