--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,8 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+//    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    // implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     testImplementation 'junit:junit:4.13.2'
