--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 04 14:37:51 IST 2023
-sdk.dir=C\:\\Users\\BMVSI-115\\AppData\\Local\\Android\\Sdk
+#Wed Jan 04 16:51:29 IST 2023
+sdk.dir=/Users/apple/Library/Android/sdk
